[package]
name = "pointer-chase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=4.4",features = ["derive"] }
rand = {version =  "0.8.5" ,features = ["small_rng"]}
minstant = "0.1.7"
clap-markdown = "0.1.3"